tests/anonstnbad.svx
*fix . 1 2 3
*fix .. 2 3 4
*fix ... 3 4 5
*fix 1 0 0 0
. ... 10.00 123 -01
... .. 0.91 359 +67
.. .   1.23 321 -21
